--- a/public/404.html
+++ b/public/404.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" dir="auto">
+<html lang="tr" dir="auto">
 
 <head><script src="/blog-sitem/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=blog-sitem/livereload" data-no-instant defer></script><meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,8 @@
 <link rel="mask-icon" href="http://localhost:1313/blog-sitem/safari-pinned-tab.svg">
 <meta name="theme-color" content="#2e2e33">
 <meta name="msapplication-TileColor" content="#2e2e33">
-<link rel="alternate" hreflang="en" href="http://localhost:1313/blog-sitem/404.html">
+<link rel="alternate" hreflang="tr" href="http://localhost:1313/blog-sitem/404.html">
+<link rel="alternate" hreflang="en" href="http://localhost:1313/blog-sitem/en/404.html">
 <noscript>
     <style>
         #theme-toggle,
@@ -95,11 +96,17 @@
                         <line x1="18.36" y1="5.64" x2="19.78" y2="4.22"></line>
                     </svg>
                 </button>
+                <ul class="lang-switch"><li>|</li>
+                    <li>
+                        <a href="http://localhost:1313/blog-sitem/en/" title="English"
+                            aria-label="English">En</a>
+                    </li>
+                </ul>
             </div>
         </div>
         <ul id="menu">
             <li>
-                <a href="http://localhost:1313/blog-sitem/posts/" title="Tüm Yazılar">
+                <a href="http://localhost:1313/blog-sitem/archives/" title="Tüm Yazılar">
                     <span>Tüm Yazılar</span>
                 </a>
             </li>
